<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/buttonlogout"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/gray"
        android:text="@string/button_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonlist"
        app:layout_constraintVertical_bias="0.17000002" />

    <Button
        android:id="@+id/buttoninventory"
        android:layout_width="157dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/red"
        android:text="@string/button_inv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.35000002" />

    <Button
        android:id="@+id/buttonlist"
        android:layout_width="159dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/red"
        android:text="@string/button_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttoninventory"
        app:layout_constraintVertical_bias="0.120000005" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="168dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        app:srcCompat="@drawable/user_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="49dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif"
        android:text="@string/menu_welcome"
        app:layout_constraintBottom_toTopOf="@+id/buttoninventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>