<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="173dp"
        android:layout_height="45dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/app_title"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="277dp"
        android:layout_height="63dp"
        android:layout_marginBottom="172dp"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.35000002" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="275dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint='@string/user_pass'
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.165" />

    <Button
        android:id="@+id/logbutton"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/red"
        android:text="@string/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="245dp"
        android:layout_height="233dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/keepmylisttransparentlogo" />
</androidx.constraintlayout.widget.ConstraintLayout>